# pege

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
examples/: 2cn0.pqr  cph_lyso.gro  example.py
pege/: __init__.py  constants.py  egnn.py  pege.pth  pege.py  utils.py
pege/egnn/: convs.py  losses.py  model.py
